--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,7 @@ section {
 }
 
 .search-button {
+    background-color: #a0a0a0;
     color: #ffffff;
     width: 100%;
     height: 30px;
@@ -113,7 +114,8 @@ section {
 }
 .account a {font-size: 14px;}
 .profile-pic {width: 60px; height: 60px;}
-.profile img {
+
+.profile-pic img {
     border-radius: 100%;
     max-width: 100%;
 }
