--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ section {
 .search-button {
     background-color: #a0a0a0;
     color: #ffffff;
-    width: 100%;
+    width: 100px;
     height: 30px;
     border: 0;
     padding: 0;
