--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ section {
     text-transform: upper;
 }
 
-.hero h1 {position: relativ; left: -30px;}
+.hero h1 {position: relative; left: -30px;}
 .hero h2 {color: #faa541;}
 .hero h1, .hero h2 {
     font-size: 63px;
@@ -147,6 +147,7 @@ section {
     margin: 55px 15px;
     width: 100%;
     border-top: 1px solid #a0a0a0;
+    border-bottom: 1px solid #a0a0a0;
     padding: 25px 0;
 }
 
