--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,7 @@ section {
     background-image: url('../img/hero.jpg');
     height: 400px;
     background-size: cover;
-    background-position: center;
+    background-position: center center;
     text-transform: uppercase;
 }
 
