--- a/css/main.css
+++ b/css/main.css
@@ -224,7 +224,7 @@ section {
 }
 
 
-.full-banner-sidebar h4:before {
+.full-banner-sidebar h4 {
     font-size: 40px;
     font-weight: 700;
     color: #637f94;
