--- a/css/main.css
+++ b/css/main.css
@@ -241,7 +241,6 @@ section {
     display: block;
 }
 
-
 .full-banner-sidebar > div:nth-of-type(1) {
     font-size: 60px;
     font-weight: 700;
@@ -272,7 +271,7 @@ footer {
 
 footer:after {
     content: "";
-    background-color: #cfa4a4;
+    background-color: #a0a0a0;
     widows: 75%;
     position: absolute;
     top: 0;
@@ -301,6 +300,8 @@ footer:after {
  }
 
  footer a:hover { text-decoration: underline;}
+
+ .social ul li{ display: inline-block;}
  .social ul li a {
      display: block;
      width: 23px;
@@ -344,7 +345,7 @@ footer:after {
      flex: 0 0 25%;
      padding: 40px 0;
      columns: #e5e5e5;
-     font-style: 16px;
+     font-size: 16px;
  }
 
  .ps img { max-width: 230px ;}
@@ -353,6 +354,7 @@ footer:after {
      content: "";
      display: block;
      width: 100%;
+     height: 1px;
      margin: 30px 0;
      background: linear-gradient(to right, #f05a28 0,#e80a89 100%);
  }
