--- a/css/main.css
+++ b/css/main.css
@@ -272,7 +272,7 @@ footer {
 footer:after {
     content: "";
     background-color: #a0a0a0;
-    widows: 75%;
+    width: 75%;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -356,7 +356,7 @@ footer:after {
      width: 100%;
      height: 1px;
      margin: 30px 0;
-     background: linear-gradient(to right, #f05a28 0,#e80a89 100%);
+     background: linear-gradient(to right,#f05a28 0,#e80a89 100%);
  }
 
  .copyright {
