--- a/css/main.css
+++ b/css/main.css
@@ -310,10 +310,10 @@ footer:after {
      background-position: center;
  }
 
- .twitter { background-image: url('../image/twitter.svg'); }
- .facebook { background-image: url('../image/facebook.svg'); }
- .instagram { background-image: url('../image/instagram.svg'); }
- .pinterest { background-image: url('../image/pinterest.svg'); }
+ .twitter { background-image: url('../img/twitter.svg'); }
+ .facebook { background-image: url('../img/facebook.svg'); }
+ .instagram { background-image: url('../img/instagram.svg'); }
+ .pinterest { background-image: url('../img/pinterest.svg'); }
 
  .newsletter .link-header {
      font-size: 12px;
